# sdl3-template

./: .env  .gitignore  CMakeLists.txt  README.md  REUSE.toml  main.c  makefile  uncrustify.cfg
.github/workflows/: main.yml
android/: build.gradle  gradle.properties  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/java/org/libsdl/helloworld/: HelloWorldActivity.java
android/app/: build.gradle  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
